<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Combat">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fondo_de_pantalla"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/atk4"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/atk1"
        android:textColor="@color/greyp"
        android:textSize="10sp"
        android:visibility="gone"
        app:cornerRadius="25dp"
        app:icon="@android:drawable/btn_star_big_on"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/atk3"
        app:layout_constraintEnd_toEndOf="@+id/atk3"
        tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/atk3"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/atk2"
        android:textColor="@color/greyp"
        android:textSize="10sp"
        android:visibility="gone"
        app:cornerRadius="25dp"
        app:icon="@android:drawable/btn_star"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/atk2"
        app:layout_constraintEnd_toEndOf="@+id/atk2"
        tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/atk2"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:text="@string/atk3"
        android:textColor="@color/greyp"
        android:textSize="10sp"
        android:visibility="gone"
        app:cornerRadius="25dp"
        app:icon="@android:drawable/btn_star_big_on"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/atk1"
        app:layout_constraintEnd_toEndOf="@+id/atk1"
        tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/atk1"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/atk4"
        android:textColor="@color/greyp"
        android:textSize="10sp"
        android:visibility="visible"
        app:backgroundTint="@color/purple_200"
        app:cornerRadius="25dp"
        app:icon="@android:drawable/btn_star_big_on"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fight"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginBottom="15dp"
        android:text="@string/fight_button"
        android:visibility="visible"
        app:backgroundTint="@color/whitep"
        app:icon="@drawable/figth_icon"
        app:iconGravity="end"
        app:iconPadding="0dp"
        app:iconSize="45dp"
        app:iconTint="@color/redp"
        app:layout_constraintBottom_toTopOf="@+id/changepk"
        app:layout_constraintEnd_toEndOf="@+id/changepk"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/changepk"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/change_pokemon_button"
        android:visibility="visible"
        app:backgroundTint="@color/whitep"
        app:icon="@drawable/pkmn_icon"
        app:iconGravity="end"
        app:iconPadding="0dp"
        app:iconSize="45dp"
        app:iconTint="@color/greenhp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/pkB"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="-1dp"
        android:contentDescription="@string/pokemon_de_espaldas"
        app:layout_constraintBottom_toTopOf="@+id/constraintPkBData"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/p094b"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/pk"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="-20dp"
        app:layout_constraintStart_toStartOf="@+id/constraintPkData"
        app:layout_constraintTop_toBottomOf="@+id/constraintPkData"
        app:srcCompat="@drawable/p094"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/pokemon_de_frente" />

    <LinearLayout
        android:id="@+id/pokemon_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="?attr/scrimBackground"
            app:cardElevation="10dp"
            app:contentPadding="5dp">

            <ImageView
                android:id="@+id/pk1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pokemon_1"

                app:srcCompat="@drawable/p003"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            app:cardBackgroundColor="?attr/scrimBackground"
            app:cardElevation="10dp"
            app:contentPadding="5dp">

            <ImageView
                android:id="@+id/pk2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pokemon_2"
                app:srcCompat="@drawable/p006" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="12dp"
            app:cardBackgroundColor="?attr/scrimBackground"
            app:cardElevation="10dp"
            app:contentPadding="5dp">

            <ImageView
                android:id="@+id/pk3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pokemon_3"
                app:srcCompat="@drawable/p009" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/constraintPkBData"
        android:layout_width="280dp"
        android:layout_height="77dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_corner"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pkb_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/pokemon_ejemplo"
                    android:textColor="@color/greyp"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/pkb_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingBottom="2dp"
                    android:text="@string/level"
                    android:textColor="@color/greyp"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pkb_hpBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:progressTint="@color/greenhp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/pkbhealth"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pkb_actual_hp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ejemplo_hp"
                        android:textColor="@color/greyp" />

                    <TextView
                        android:id="@+id/separator1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/slashbar"
                        android:textColor="@color/greyp" />

                    <TextView
                        android:id="@+id/pkb_maxhp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ejemplo_hp"
                        android:textColor="@color/greyp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/pkbstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/status"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/quemado"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintPkData"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_corner"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:rotation="180"
            android:weightSum="3">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pk_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/pokemon_ejemplo"
                        android:textColor="@color/greyp"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/pk_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="0dp"
                        android:layout_marginEnd="10dp"
                        android:paddingBottom="2dp"
                        android:text="@string/level"
                        android:textColor="@color/greyp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pkstatus"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/status"
                        android:paddingTop="5dp"
                        android:paddingRight="2dp"
                        app:srcCompat="@drawable/congelado"
                        tools:ignore="ImageContrastCheck" />

                    <ProgressBar
                        android:id="@+id/pk_hpBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.40"
                        android:progressTint="@color/greenhp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTexto"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginBottom="10dp"
        android:background="@color/whitep"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/greyp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:background="@drawable/ic_corner"
                android:backgroundTint="@color/blackp"
                android:rotation="0">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/screentext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:gravity="center"
                android:text="@string/texto_ejemplo_combate"
                android:textColor="@color/whitep"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:background="@drawable/ic_corner"
                android:backgroundTint="@color/blackp"
                android:rotation="180">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/playerturn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/turno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/j1" />

    <ImageView
        android:id="@+id/playerturnscreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/pantallaJ"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>